with love & coffee

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </ul>
           <ul class="copyright">
             <li>&copy; Tezos India Foundation. All rights reserved.</li>
-            <li>Made With Love and Coffee</li>
+            <li>Chained in a single Night With Love and Coffee</li>
           </ul>
         </div>
       </section>
