--- a/faq.html
+++ b/faq.html
@@ -91,7 +91,7 @@
         <div class="inner">
           <ul class="copyright">
             <li>&copy; Tezos India Foundation. All rights reserved.</li>
-            <li>Made With Love and Coffee</li>
+            <li>Chained in a single Night With Love and Coffee</li>
           </ul>
         </div>
       </section>
