--- a/faq.html
+++ b/faq.html
@@ -18,7 +18,7 @@
       <header id="header">
         <h1><a href="index.html">TEZIndia 1.0</a></h1>
         <nav>
-          <a href="#menu">Menu</a>
+          <a href="#menu">Explore</a>
         </nav>
       </header>
 
@@ -30,7 +30,6 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="tracks_bounties.html">Tracks & Bounties</a></li>
             <li><a href="timeline.html">Timeline</a></li>
-            <li><a href="faq.html">FAQs</a></li>
           </ul>
           <a href="#" class="close">Close</a>
         </div>
