--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <!-- One -->
         <section id="one" class="wrapper spotlight style2">
           <div class="inner">
-            <a href="#" class="image"><img src="images/tez-logo.png" alt=""/></a>
+            <img src="images/tez-logo.png" style=" padding-left: 8%; height: 180px" alt=""/>
             <div class="content">
-              <h2 class="major">#BUILD with Tezos </h2>
+              <h2 class="major" style="padding-top: 10px;">#BUILD with Tezos </h2>
               <p>
 				Bringing up one of the Biggest Online Hackathon in India for the first time in collaboration with <strong>Devfilio</strong>.
 				Build on Tezos and unlesh its powers with the capability of Being the last Blockchain.
@@ -75,7 +75,7 @@
 				We have a net prize pool of <strong> 3k dollars </strong>and is distributed on different Bounty Tracks. Which are curated for making your portfolio good in this Blockchain ecosystem.
 				
               </p>
-              <a href="#" class="special">Learn more about the Tracks </a>
+              <a href="tracks_bounties.html" class="special">Learn more about the Tracks </a>
             </div>
           </div>
         </section>
@@ -83,14 +83,14 @@
         <!-- Three -->
         <section id="three" class="wrapper spotlight style3">
           <div class="inner">
-            <a href="#" class="image"><img src="images/clk.png" alt=""/></a>
+            <img src="images/clk.png" style="width: 100%; height: 30%" alt=""/>
             <div class="content">
               <h2 class="major">Timeline | March 15 - April 15, 2020</h2>
               <p>
 				Its a month long Hackathon explecting where you and your team can <strong> LEARN, BRAINSTORM & BUILD</strong>
 				the awesome possible. A team can contain <strong>MAX 4 Hackers</strong>. Get Your SQUAD !
               </p>
-              <a href="#" class="special">Learn more</a>
+              <a href="timeline.html" class="special">Learn more</a>
             </div>
           </div>
         </section>
@@ -103,51 +103,7 @@
               We got Partners collaborating with us for making the event Successfull. Be with the force and Partner with us 😁
             </p>
             <section class="features">
-              <!-- <article>
-                <a href="#" class="image"
-                  ><img src="images/pic04.jpg" alt=""
-                /></a>
-                <h3 class="major">Sed feugiat lorem</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id
-                  nulla dignissim dapibus ultrices.
-                </p>
-                <a href="#" class="special">Learn more</a>
-              </article> -->
-              <!-- <article>
-                <a href="#" class="image"
-                  ><img src="images/pic05.jpg" alt=""
-                /></a>
-                <h3 class="major">Nisl placerat</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id
-                  nulla dignissim dapibus ultrices.
-                </p>
-                <a href="#" class="special">Learn more</a>
-              </article>
-              <article>
-                <a href="#" class="image"
-                  ><img src="images/pic06.jpg" alt=""
-                /></a>
-                <h3 class="major">Ante fermentum</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id
-                  nulla dignissim dapibus ultrices.
-                </p>
-                <a href="#" class="special">Learn more</a>
-              </article>
-              <article>
-                <a href="#" class="image"
-                  ><img src="images/pic07.jpg" alt=""
-                /></a>
-                <h3 class="major">Fusce consequat</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id
-                  nulla dignissim dapibus ultrices.
-                </p>
-                <a href="#" class="special">Learn more</a>
-              </article>
-            </section> -->
+  
             <ul class="actions">
               <li><a href="#" class="button">Browse All</a></li>
             </ul>
