--- a/faq.html
+++ b/faq.html
@@ -88,6 +88,10 @@
       <!-- Footer -->
       <section id="footer">
         <div class="inner">
+          <p>
+            MAY THE CODE BE WITH YOU ... ⚡
+          </p>
+
           <ul class="copyright">
             <li>&copy; Tezos India Foundation. All rights reserved.</li>
             <li>Chained in a single Night With Love and Coffee</li>
