--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <!-- Banner -->
       <section id="banner">
         <div class="inner">
-          <div class="logo"><span class="icon fa-gem"></span></div>
-          <h2>TEZIndia 1.0</h2>
+          <div class="logo"><img src="images/TEZindia.png" style= "width: 90% ;"/></div>
+          <!-- <h2>TEZIndia 1.0</h2> -->
           <p>
             India's First And Biggest Online Hackathon On
             <a href="http://tezosindia.foundation">Tezos </a>
