--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <!-- Banner -->
       <section id="banner">
         <div class="inner">
-          <div class="logo"><img src="images/TEZindia.png" style= "width: 90% ;"/></div>
+          <div class="logo"><img src="images/TEZindia-white.png" style= "width: 90% ;"/></div>
           <!-- <h2>TEZIndia 1.0</h2> -->
           <p>
             India's First And Biggest Online Hackathon On
